--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@ngrx/effects": "^8.5.2",
     "@ngrx/store": "^8.5.2",
+    "@ngrx/store-devtools": "^8.5.2",
     "@schuchard/prettier": "^3.1.0",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
